# cms_for_rust

./: .swp  Cargo.toml  README.md  rustfmt.toml  todos.json
admin/: README.md  package.json  pnpm-lock.yaml  unocss.config.ts
admin/qwik-app/: package.json
admin/src/: root.tsx
admin/src-tauri/: Cargo.toml  tauri.conf.json
admin/src-tauri/src/: lib.rs  main.rs
admin/src/routes/: index.tsx
admin_example/: Cargo.toml
admin_example/src/: entities.rs  main.rs
admin_panel/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  sb_types.d.ts  uno_css_colors.ts  uno_css_keywords.ts  unocss.config.ts  vite.config.ts
admin_panel/.create-qwik-uip5gr8zei/: package-lock.json
admin_panel/.storybook/: main.ts  preview.tsx
admin_panel/examples/blog/: Cargo.toml
admin_panel/examples/blog/src/: main.rs
admin_panel/src/: preflight.css  root.tsx
admin_panel/src/components/: card.tsx  routes_entry_builder.tsx
admin_panel/src/components/dock/: dock.tsx
admin_panel/src/components/modal/: modal.ts
admin_panel/src/components/scroll_area/: scroll_area.stories.tsx  scroll_area.tsx
admin_panel/src/routes/: index.tsx  layout.tsx
admin_panel/src/routes/entity/todo/: index.tsx
admin_panel/src/utils/: backend.ts  dev_errs.ts  endpoints.ts  useFeResource.ts
admin_panel/src/utils/hooks/: only_one.ts
admin_ui/: package.json  pnpm-lock.yaml  vite.config.ts
admin_ui/patches/: @builder.io__qwik-city.patch  @qwik-ui__headless.patch
admin_ui/src/: root.tsx
admin_ui/src/routes/: index.tsx  layout.tsx
admin_ui/src/routes/admin/collections/: index.tsx
admin_ui/src/routes/auth/: layout.tsx
admin_ui/src/routes/auth/init/: index.tsx
admin_ui/src/routes/auth/init_user/: index.tsx
admin_ui/src/routes/auth/login/: index.tsx
admin_ui/src/routes/auth/no_connection/: index.tsx
admin_ui/src/routes/panel/: index.tsx  layout.tsx  styles.module.scss
admin_ui/src/routes/panel/collections/: index.tsx  layout.tsx  styles.module.scss
admin_ui/src/routes/panel/collections/[collection]/: breadcrumbs.module.scss  index.tsx  modal.module.scss
admin_ui/src/scss/: _accordion.scss  _alert.scss  _base.scss  _bulkbar.scss  _dropdown.scss  _flatpickr.scss  _form.scss  _grid.scss  _layout.scss  _mixins.scss  _overlay_panel.scss  _schema_field.scss  _tabs.scss  _tooltip.scss  _vars.scss  main.scss
admin_ui/src/utils/: client.ts  client2.ts  client3.ts  client_fetch.ts  client_fetch_2.ts  client_state.ts  match.ts  schema.ts  suspend_boundary.tsx  valibot_ext.ts
better_testing/: Cargo.toml
better_testing/src/: axum.rs  internal.rs  lib.rs  test_internals.rs  unpretty.rs
better_testing/tests/: main.rs
client/: Cargo.toml
client/examples/: collection_api.rs  easy_to_custom.rs  todo_app.rs
client/src/: main.rs
cms/: Cargo.toml
cms/cms_macros/: Cargo.toml
cms/cms_macros/src/: entity_derive.rs  lib.rs  schema_macro.rs  v0.rs
cms/src/: auth.rs  axum_router.rs  build_tuple.rs  client_example.rs  collections.rs  collections_editor.rs  dyn_collection.rs  dynamic_schema.rs  entities.rs  error.rs  filters.rs  initialization.rs  lib.rs  macro_prelude.rs  migration.rs  migration2.rs  op_insert_one.rs  operations.rs  queries_bridge.rs  queries_for_sqlx_extention.rs  relations.rs  relations_v2.rs  row_to_json_cached.rs  schema_def.rs  schema_info.rs  testing.rs  traits.rs  tuple_impls.rs  tuple_index.rs  uniform_response_layer.rs  utils.rs
cms/src/auth/: email_password.rs  ijwt.rs  other.rs
cms/src/coll/: dynamic.rs  expe.rs  mod.rs  rel_optional_to_many.rs  rel_trait.rs
cms/src/operations/: delete_one.rs  get_all.rs  get_one.rs  insert_one.rs  mod.rs  select_many.rs  select_one.rs  update_one.rs
cms/src/orm/: dynamic_schema.rs  mod.rs  operations.rs  queries.rs  queries_bridge.rs  relations.rs  select_one.rs  tuple_impls.rs
cms/src/orm/operations/: insert_one.rs  select_many.rs  select_one.rs  update_one.rs
cms/src/orm/relations/: many_to_many.rs  one_to_many.rs  one_to_many_inverse.rs  optional_to_many.rs
cms/src/relations/: deep_relation.rs  many_to_many.rs  mod.rs  optional_to_many.rs  optional_to_many_inverse.rs  other.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
macros/: Cargo.toml
macros/src/: collection_derive.rs  entity_derive.rs  into_mut_argument_derive.rs  lib.rs  prepared_statement.rs  relation.rs  relations_mod.rs  schema_macro.rs
pocketbase_ui/: .env.development  README.md  pnpm-lock.yaml
pocketbase_ui/src/utils/: ApiClient.js
process_manager/: Cargo.toml
process_manager/src/: basic_daemon.rs  main.rs
query/: Cargo.toml
query/query_macros/: Cargo.toml
query/query_macros/src/: db_generic.rs  db_generic_rules.rs  into_query.rs  lib.rs  test.rs
query/src/: accept_extra.rs  clonable_query.rs  concept_positional_buffer.rs  concept_prepared_statement.rs  create_table_st.rs  create_table_st2.rs  create_table_st4.rs  debug_query.rs  debug_sql.rs  delete_st.rs  executable.rs  execute_no_cache.rs  expressions.rs  expressions_2.rs  ident_safety.rs  impls.rs  insert_many_st.rs  insert_one_st.rs  lib.rs  named_buffer.rs  positional_buffer.rs  positional_query.rs  prepared_statement.rs  quick_query.rs  quick_query_v2.rs  returning.rs  sanitize.rs  select_st.rs  string_query.rs  support_non_static_args_mod.rs  update_st.rs
query/tests/: positional_buffer.rs  prepared_vs_quick_queries.rs  workflow.rs
tuples_op/: Cargo.toml
tuples_op/src/: behaviors.rs  build_tuple.rs  decompose_tuple.rs  impls.rs  lib.rs  v2.rs
tuples_op/tests/: manual.rs  migrate.rs  new.rs  tailwind.rs  with_lt.rs  with_macro.rs  yielding.rs
tuples_op/tuples_op_macros/: Cargo.toml
tuples_op/tuples_op_macros/src/: erroneos.rs  error.rs  extend_to_tuples.rs  invariant_macro.rs  lib.rs  tests.rs  tuple_trait.rs
utils/: Cargo.toml
utils/src/: lib.rs  testing_prelude.rs
