[package]
name = "better_testing"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
axum = { version = "0.7.4", optional = true }
http-body-util = { version = "0.1.1", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
http = { version = "1.1.0", optional = true }

[features]
full = ["axum"]
axum = [
    "dep:axum", 
    "dep:http-body-util", 
    "dep:serde", 
    "dep:serde_json",
    "dep:http"
]




