[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tuples_op  = { path = "../tuples_op" }
queries_for_sqlx = { path = "../query" }
cms_for_rust = { path = "../cms" }
better_testing = { path = "../better_testing/", features = ["axum"] }
async-trait = "0.1.78"
axum = "0.7.4"
base64 = "0.22.0"
bcrypt = "0.15.0"
chrono = "0.4.35"
convert_case = "0.6.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.1"
jwt = "0.16.0"
rand = "0.8.5"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "postgres",
    "macros",
    "runtime-tokio",
    "chrono",
    "rust_decimal",
] }
sqlx-postgres = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
uuid = "1.7.0"
axum-macros = "0.4.1"
hmac = "0.12.1"
inventory = "0.3.15"
ctor = "0.2.8"
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.5.0"
http = "1.1.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
