[package]
name = "client"
description = "basic client to test the process_manager against"
version = "0.1.0"
edition = "2021"

[features]
HMR = []

[dependencies]
tower = { version = "0.5.2", features = ["util"] }
axum = "0.7.9"
cms_for_rust = { path = "../cms" }
queries_for_sqlx = { path = "../query" }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "^0.7.4", features = ["sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
