[package]
name = "cms_for_rust"
version = "0.0.0"
edition = "2021"

description = "A simple CMS for Rust"
license = "MIT"

[dev-dependencies]
tuples_op = { path = "../tuples_op" }
better_testing  = { path = "../better_testing", feature = ["full"] }

[dependencies]
async-trait = "0.1.78"
cms_macros = { path = "./cms_macros", version = "0.0.0" }
inventory = "0.3.15"
queries_for_sqlx = {version = "0.0.0", path = "../query", features = ["export_inner_executable"]}
sqlx = { version = "0.7.4", features = [
"runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "postgres",
    "sqlite",
    "mysql",
] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
tracing = "0.1.40"
serde = "1.0.203"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
axum = "0.7.4"
axum-macros = "0.4.1"
http-body-util = "0.1.1"
tower = "0.4.13"
paste = "1.0.15"
lazy_static = "1.5.0"
either = "1.13.0"
case = "1.0.0"
