[package]
name = "queries_for_sqlx"
version = "0.0.0"
edition = "2021"

description = "composible sql query builder, with support of binding into query buffer"
license = "MIT"

[dev-depencencies]
better_testing = { path = "../better_testing", features = ["full"] }
pretty_assertions = "1"

[dependencies]
case= "1.0.0"
either = "1.13.0"
query_macros = { path = "./query_macros", version = "0.1.0" }
sqlx = { version = "0.7.4", features = [
"runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "postgres",
    "sqlite",
    "mysql",
] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
tracing = "0.1.40"
serde = "1.0.203"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
paste = "1.0.15"

[features]
default = []
# this feature exports an api that is not stable
# it contains some unsafe code that I use safely but I wonder
# if in the future I can have better api with no unsafe code
export_inner_executable = []
waiting_specialization = []
build_statments = []


