[package]
name = "queries_for_sqlx"
version = "0.0.1"
edition = "2021"

description = "composible sql query builder, with support of binding into query buffer"
license = "MIT"

[dev-depencencies]
pretty_assertions = "1"

[dependencies]
case= "1.0.0"
either = "1.13.0"
lazy_static = "1.5.0"
cms_macros = { path = "../macros", version = "0.0.1" }
sqlx = { version = "0.7.4", features = [
"runtime-tokio",
    "uuid",
    "chrono",
    "rust_decimal",
    "postgres",
    "sqlite",
    "mysql",
] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
tracing = "0.1.40"
serde = "1.0.203"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
paste = "1.0.15"

[features]
default = []
# in sqlx, in-memory databases can take references like: SqliteArgumentValue<'q>, this is uncommon in my opinion; but I can see how they are useful. there are technical challenges if I want to support this in this crate; gated under this feature. for now, this feature is disabled by default and all arguments has to be 'static
# a big problem is that I might need to introduce breaking changes in the public traits and struct definitions to support this.
support_non_static_args = []
# this feature exports an api that is not stable
# it contains some unsafe code that I use safely but I wonder
# if in the future I can have better api with no unsafe code
export_inner_executable = []
waiting_specialization = []
build_statments = []
# this allows you to implement the trait `Accept` 
# for larger set of types, this comes at the cost of
# having to use `bind` function for `impl Encode` types
flexible_accept_impl = []



