[package]
name = "cms_macros"
version = "0.0.0"
edition = "2021"

description = "Procedural macros for the cms_for_rust"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
case = "1.0.0"
darling = "0.20.10"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.33"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "visit"] }
