[package]
name = "client"
description = "basic client to test the process_manager against"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower = { version = "0.5.2", features = ["util"] }
axum = { version = "0.8.1", features = ["tracing"] }
cms_for_rust = { path = "../../cms" }
queries_for_sqlx = { path = "../../query" }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "^0.7.4", features = ["sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
