[package]
name = "admin_example"
version = "0.1.0"
edition = "2021"

[dependencies]
queries_for_sqlx = { path = "../../../query" }
cms_for_rust = { path = "../../../cms" }
sqlx = { version = "0.7.4", features = ["postgres", "sqlite"] }
serde = "1.0.210"
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
